# game-prediction

./: .cz.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: bumpversion.yml  workflow.yml
game_prediction/: api.py  config.py  constants.py  data_utils.py  frontend.py
game_prediction/pipelines/: config_method.yaml  inference.py  train.py
game_prediction/tasks/: model_performance.py  prepare_data.py  saving.py  scoring.py  train_model.py
game_prediction/utils/: preprocessing.py
tests/: test_hello_world.py
